examples/test/testpolicy10145.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10145
  namespace: namespace157
spec:
  podSelector:
    matchLabels:
      key44: value14
      key18: value18
      key11: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value35
          key25: value20
      podSelector:
        matchLabels:
          key40: value26
          key26: value13
          key29: value47
